[package]
name = "bcproxy-rust"
version = "0.1.0"
authors = ["x1a0 <zhangxiao@xzhang.net>"]

[dependencies]
log = "0.4"
env_logger = "0.5"
tokio = "0.1"
tokio-io = "0.1"
futures = "0.2"
bytes = "0.4"
postgres = { version = "0.15", features = ["with-chrono"] }
r2d2 = "0.8"
r2d2_postgres = "0.14"
chrono = "0.4"
clap = "2.31"
